@@ -1,3 +1,5 @@
+- Rework sub bug fix in order not to interfere with AI pathing vs enemy units
+
 * RELEASE 16K
 - Consider lethal bombard ability when disallowing useless bombard vs airfields
 
